assert: failed: heap size is too big for compressed oops

XMLWordPrintable

    • gc
    • b24
    • b51
    • Not verified

        ;; Using jvm: "/bpool/local/common/jdk/baseline/solaris-amd64/jre/lib/amd64/server/libjvm.so"
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/jprt/T/P1/170135.amurillo/s/src/share/vm/memory/universe.cpp:889), pid=11448, tid=2
        # assert(!UseCompressedOops || (total_reserved <= (OopEncodingHeapMax - os::vm_page_size()))) failed: heap size is too big for compressed oops
        #
        # JRE version: (8.0-b82) (build )
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b24-internal-201303231701.amurillo.hs25-b24-snapshot-fastdebug mixed mode solaris-amd64 compressed oops)
        # Core dump written. Default location: /bpool/local/aurora/sandbox/results/workDir/compiler/6865031/Test/core or core.11448
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #

              Assignee:
              Thomas Schatzl
              Reporter:
              Igor Ignatyev (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: